--- a/src/components/Transactions/ui/Transactions.scss
+++ b/src/components/Transactions/ui/Transactions.scss
@@ -1,3 +1,5 @@
+@use '@/app/mixins.scss';
+
 .Transactions {
   height: 100%;
   width: max-content;
@@ -11,6 +13,10 @@
   flex-direction: column;
   align-items: center;
   gap: 3rem;
+
+  > button {
+    @include mixins.btn;
+  }
 
   .Header {
     width: 100%;
