--- a/src/components/Wallet/ui/Wallet.scss
+++ b/src/components/Wallet/ui/Wallet.scss
@@ -1,4 +1,3 @@
-@use '@/app/mixins.scss';
 
 .Wallet {
   height: 100%;
@@ -12,17 +11,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap:3rem;
+  gap: 3rem;
 
-  > button {
-    @include mixins.btn;
-  }
 
   .Header {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    gap:2rem;
+    gap: 2rem;
   }
 
   .AddressWrapper {
@@ -30,6 +26,27 @@
     display: flex;
     justify-content: space-between;
     gap: 2rem;
+
+    > button {
+      background-color: #0098EA;
+      color: #FFFFFF;
+      box-shadow: 0 4px 24px rgba(0, 0, 0, 0.16);
+      padding: 8px 16px 8px 12px;
+      display: flex;
+      align-items: center;
+      height: 40px;
+      border: none;
+      border-radius: 100vh;
+      cursor: pointer;
+      font-size: 14px;
+      line-height: 18px;
+      width: fit-content;
+
+
+      &:disabled {
+        opacity: 0.5;
+      }
+    }
 
     .Address {
       display: flex;
