--- a/src/components/Transactions/ui/Transactions.scss
+++ b/src/components/Transactions/ui/Transactions.scss
@@ -18,6 +18,28 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+
+    > button {
+      background-color: #0098EA;
+      color: #FFFFFF;
+      box-shadow: 0 4px 24px rgba(0, 0, 0, 0.16);
+      padding: 8px 16px 8px 12px;
+      display: flex;
+      align-items: center;
+      height: 40px;
+      border: none;
+      border-radius: 100vh;
+      cursor: pointer;
+      font-size: 14px;
+      line-height: 18px;
+      width: fit-content;
+
+
+      &:disabled {
+        opacity: 0.5;
+      }
+    }
+
   }
 
   &_Body {
